# gldisplay

./: CMakeLists.txt  Makefile  README
include/: CtGLDisplay.h  GLDisplay.h  SimplePipe.h  autoobj.h  image.h  imageapi.h  prectime.h
python/: __init__.py
sip/: .gitignore  clean.py  configure.py  gldisplay.sip  gldisplay_before_4_12.sip  gldisplay_init_numpy.cpp  gldisplayconfig.py.in
src/: .gitignore  CtGLDisplay.cpp  GLDisplay.cpp  Makefile  Makefile.inc  SimplePipe.cpp  image.cpp  moc_image.cpp_parameters
test/: .gitignore  CMakeLists.txt  Makefile  gldisplay_test.cpp  image_test.c  multi_simu_gldisplay_test.py  simple_simu_gldisplay_test.py  simu_gldisplay_test.cpp  simu_gldisplay_test.py  test_gldisplay_simu.cpp  test_gldisplay_thirdparty.cpp
